Fixing layout issue when inline editing non HTML text fields.

--- a/src-gwt/org/opencms/acacia/client/css/form.css
+++ b/src-gwt/org/opencms/acacia/client/css/form.css
@@ -372,6 +372,13 @@ div.mce-widget.mce-tooltip{
 	z-index: value("constants.css.zIndexPopup") !important;
 }
 
+.noHTML > p {
+	padding: 0;
+	margin: 0;
+	font-size: inherit;
+	line-height: inherit;
+}
+
 /** Help bubble styles. */
 div.helpBubble{
 	position: absolute;
